--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "compodoc": "npx compodoc -p tsconfig.json -s"
+    "compodoc": "npx compodoc -p tsconfig.json -s",
+    "commitmsg": "commitlint -E HUSKY_GIT_PARAMS"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +39,8 @@
     "@angular-devkit/build-angular": "^15.1.0",
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "^15.1.0",
+    "@commitlint/cli": "^17.7.2",
+    "@commitlint/config-conventional": "^17.7.0",
     "@types/crypto-js": "^4.1.1",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
