--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,19 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "indent": ["error", 2]
+        "indent": ["error", 2],
+        "camelcase": "error",
+        "consistent-return": "error",
+        "func-names": "error",
+        "no-magic-numbers": "error",
+        "no-unused-vars": "error",
+        "prefer-const": "error",
+        "prefer-arrow-callback": "error",
+        "array-bracket-spacing": ["error", "always"],
+        "object-curly-spacing": ["error", "always"],
+        "max-len": ["error", { "code": 80 }],
+        "no-empty": "error", 
+        "no-throw-literal": "error"
     }
+    
 }
