--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
         "no-magic-numbers": "error",
         "no-unused-vars": "error",
         "prefer-const": "error",
-        "array-bracket-spacing": ["error", "always"],
+        "array-bracket-spacing": ["error", "never"],
         "object-curly-spacing": ["error", "always"],
         "max-len": ["error", { "code": 200 }],
         "no-empty": "error",
