Admin + lint + selectors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "camelcase",
+        "datatables",
         "Enrutador",
         "generceo",
         "inicialización",
